--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/*? base css start */
+
+
 @import url('https://fonts.googleapis.com/css2?family=Electrolize&family=Jost:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap');
 
 
@@ -28,3 +31,73 @@ h6,
 p {
     margin: 0;
 }
+
+.container {
+    max-width: 1200px;
+    width: 100%;
+    margin:0 auto;
+}
+/*? base css end */
+
+
+/* ! header start */
+
+
+header {
+    border-bottom: 1px solid #dee0ea;
+
+}
+
+.header-row {
+    height: 90px;
+    display: flex;
+    align-items: center;
+}
+.global-notification{
+    background-color: #1267ef;
+    padding: 14px 0;
+    text-align: center;
+    color: white;
+    font-size: 12px;
+
+}
+
+.global-notification a {
+    color: white;
+    font-weight: 600;
+}
+
+.header-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  
+}
+
+.header-left .logo{
+    font-size: 24px;
+    font-weight: 500;
+    display: flex;
+
+}
+
+.header-center .navigation .menu-list{
+    display: flex;
+    column-gap: 30px;
+    align-items: center;
+
+}
+
+.header-center  .menu-list .menu-link{
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+    
+}
+
+
+.header-center  .menu-list i {
+    font-size: 12px;
+}
+
+/* ! header end */
