--- a/style.css
+++ b/style.css
@@ -86,57 +86,79 @@ header {
   text-transform: uppercase;
   letter-spacing: 1.2px;
 }
+.header-center .menu-list .menu-link {
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+  position: relative;
+}
 
+.header-center .menu-list .menu-link::after {
+  content:"";
+  width: 20px;
+  height: 1px;
+  background-color: #1367ef;
+  position: absolute;
+  bottom: -2px;
+  left: 50%;
+  transform: translate(-50%);
+  transition: 02s ease width ;
+}
+
+
+
+.header-center  .menu-list .menu-list-item:hover .menu-link::after{
+  width: 100%;
+}
+
+.header-center .menu-list .menu-link.active::after{
+  width: 100%;
+} 
+
+.header-center .menu-list .menü-list-item{
+  display: flex;
+}
 .header-center .menu-list i {
   font-size: 12px;
 }
 
-
-.header-right .header-right-links{
-    display: flex;
-    column-gap: 16px;
-    align-items: center;
-
+.header-right .header-right-links {
+  display: flex;
+  column-gap: 16px;
+  align-items: center;
 }
 
 .header-right .bi-person {
-    font-size: 23px;
-
+  font-size: 23px;
 }
 
 .header-right .toggle-button {
-border: none;
-background-color:transparent;
-
+  border: none;
+  background-color: transparent;
 }
 
-
-.header-right  i {
-font-size: 18px;
-display: flex;
-
+.header-right i {
+  font-size: 18px;
+  display: flex;
 }
 
-.header-right  .header-cart {
-    position: relative;
-
+.header-right .header-cart {
+  position: relative;
 }
 
-.header-right  .header-cart-link .header-cart-count {
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    background-color:#1367ef ;
-    color: white;
-    font-size: 10px;
-    border-radius: 100%;
-    top: -10px;
-    right: -10px;
-    text-align: center;
-    font-weight: 500;
+.header-right .header-cart-link .header-cart-count {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  background-color: #1367ef;
+  color: white;
+  font-size: 10px;
+  border-radius: 100%;
+  top: -10px;
+  right: -10px;
+  text-align: center;
+  font-weight: 500;
 }
-
-
-
 
 /* ! header end */
